src/program-test-242-1/src/src-output/student3/output-student3.txt
.\.\src\src-output\student3\ArraySearcher.java:8: error: ']' expected
		int a[0] = Integer.parseInt(args[3]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:8: error: illegal start of expression
		int a[0] = Integer.parseInt(args[3]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:9: error: ']' expected
		int a[1] = Integer.parseInt(args[4]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:9: error: illegal start of expression
		int a[1] = Integer.parseInt(args[4]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:10: error: ']' expected
		int a[2] = Integer.parseInt(args[5]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:10: error: illegal start of expression
		int a[2] = Integer.parseInt(args[5]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:11: error: ']' expected
		int a[3] = Integer.parseInt(args[6]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:11: error: illegal start of expression
		int a[3] = Integer.parseInt(args[6]);
		       ^
8 errors
.\.\src\src-output\student3\TestProgram.java:6: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:6: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		                            ^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:17: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:17: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		                            ^
  symbol:   class ArraySearcher
  location: class TestProgram
4 errors
n = 5
120
n = 10
3628800
Error: Could not find or load main class ArraySearcher
Error: Could not find or load main class ArraySearcher
Error: Could not find or load main class TestProgram
